Texture Paint: "Jittering" when enabling radius pressure #43959

Closed
opened 2015-03-11 08:53:15 +01:00 by Leon Cheung · 11 comments
Member

System Information
Win7 64bit | GTX580

Blender Version
Broken: 2.73.9 51a60cb

Short description of error
I think currently it only happens when painting in UV/Image Editor. In 2.71, it is almost fine, but it became more obvious since then, especially when painting with smaller radius. Turning off the peassure button will "solve" it temporally.

5.jpg

Exact steps for others to reproduce the error

2.72+:
2.72.jpg

2.71:
2.71.jpg

PressureRadiusPaint0.blend

Thanks for checking.

**System Information** Win7 64bit | GTX580 **Blender Version** Broken: 2.73.9 51a60cb **Short description of error** I think currently it only happens when painting in **UV/Image Editor**. In 2.71, it is almost fine, but it became more obvious since then, especially when painting with smaller radius. Turning off the peassure button will "solve" it temporally. ![5.jpg](https://archive.blender.org/developer/F149751/5.jpg) **Exact steps for others to reproduce the error** 2.72+: ![2.72.jpg](https://archive.blender.org/developer/F149744/2.72.jpg) 2.71: ![2.71.jpg](https://archive.blender.org/developer/F149745/2.71.jpg) [PressureRadiusPaint0.blend](https://archive.blender.org/developer/F149741/PressureRadiusPaint0.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @Sergey

Added subscriber: @Sergey

Are you actually painting with a tablet or it's pressure option which is also affecting on non-pressure sensitive device like mouse?

Are you actually painting with a tablet or it's pressure option which is also affecting on non-pressure sensitive device like mouse?
Author
Member

sorry, I should mention that, Yes, with tablet, for sure. :)

sorry, I should mention that, Yes, with tablet, for sure. :)
Antonis Ryakiotakis self-assigned this 2015-03-11 16:18:26 +01:00

I'll check that unless someone else wants to...

I'll check that unless someone else wants to...
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by 79393cb7a2

This issue was referenced by 79393cb7a2dfef3bd7205b1a68558aaba2f2b5da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 79393cb7a2.

Closed by commit 79393cb7a2.

This issue was referenced by 2d1879b714

This issue was referenced by 2d1879b7145dd71d84f403791093fbca47775d6d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43959
No description provided.