Fix T43959 jittering in 2D texture painting.

This is still not perfect,
but should work smoother now. Previously there was visible wobbling
while painting.

This can be included in final release.